--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+  <body>
 
 
 
@@ -15,12 +15,14 @@
       
         <!-- <form id="signup-form"> -->
           <div class="form">
+            <label >Name:</label>
+            <input type="text" id="name" name="name" required><br><br>
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required><br><br>
           <label for="password">Password:</label>
           <input type="password" id="password" name="password" required><br><br>
-          <button id="Signup">Submit</button>
-          <p>Already have an account? <a href="index.html">Login</a></p>
+          <button id="Sbtn" class="Sbtn">Submit</button>
+          <p>Already have an account? <a href="login.html">Login</a></p>
         <!-- </form> -->
     </div>
       </div>
@@ -30,5 +32,5 @@
   
 
     <script type="module" src="auth.js"></script>
-</body>
+ </body>
 </html>
