--- a/login.html
+++ b/login.html
@@ -13,9 +13,9 @@
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required><br><br>
     <button id="Login">Submit</button>
-    <p>Don't have an account? <a href="signup.html">Signup</a></p>
+    <p>Don't have an account? <a href="index.html">Signup</a></p>
 </div>
 </div>
-<script type="module" src="auth.js"></script>
+<script type="module" src="login.js"></script>
 </body>
 </html>
